# deepnn

./: LICENSE  README.md  README.md~
cl/: CMakeLists.txt
cl/include/: MatrixMultiplicationCPPKernel.hpp~
cl/src/: setup.cpp~
cl/test/MAT_MUL/: CMakeCache.txt  MAT_MUL.cl  Makefile
code/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  log.txt
code/cl/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
code/cl/include/: MatrixMultiplicationCPPKernel.hpp  kernels.hpp  main.hpp  main.hpp~
code/cl/src/: MatrixMultiplicationCPPKernel.cpp~  kernels.cpp  main.cpp  main.cpp~  setup.cpp
code/cl/test/MAT_MUL/: CMakeLists.txt  MAT_MUL.cpp  cmake_install.cmake
code/include/: SDKThread.hpp  common.hpp  conv.hpp  full.hpp  graph.hpp  input.hpp  main.hpp  schedule.hpp  softmax.hpp
code/include/clFFT/: clFFT.version.h
code/lib/clFFT/: libclFFT.so.2  libclFFT.so.2.6.0
code/matlab/conv/: cnn.m  test.m
code/matlab/full/: fullconn.m  fullconn.m~  test.m  test.m~
code/matlab/output/softmax/: softmax.m  softmax.m~  test.m
code/src/: common.cpp  conv.cl  conv.cpp  full.cl  full.cpp  full.dEdB.cpp  full.dEdW.cpp  full.dEdX.cpp  full.forward.cpp  graph.cpp  input.cpp  main.cpp  schedule.cpp  setup.cpp  softmax.cl  softmax.cpp
code/src/SOIL/: stb_image_aug.c
code/test/: cnntest.cpp  generate.py
code/userdata/: conv.adv.net  conv.net  example.net  large.net  medium.net  mimo.net  multi-inputs.net  multi-outputs.net  small.net  solver.conf
